syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
option java_package = "chatweb.events";

message UserOnlineResponse {
  repeated int32 onlineUserIds = 1;
}

message AddEventRequest {
  string eventJson = 1;
}

service EventsService {
  rpc GetOnlineUserIds(google.protobuf.Empty) returns (UserOnlineResponse);
  rpc AddEvent(AddEventRequest) returns (google.protobuf.Empty);
}
